# mp4_decrypter

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: internal-architecture.md
src/: main.rs
src/domain/: services.rs  value_objects.rs
src/infrastructure/ffmpeg/: repository.rs
src/presentation/: dto.rs  intent.rs  message.rs  reducer.rs  state.rs  view.rs
