[package]
name = "mp4_decrypter"
version = "1.3.0"
authors = ["Magichan Lab. <magichan.lab@gmail.com>"]
edition = "2021"
description = "Decrypt encrypted MP4 files."
license = "MIT"

[dependencies]
anyhow = "1"
iced = { version = "0.14", features = ["image", "tokio", "svg"] }
crossbeam-channel = "0.5"
rfd = "0.17.2"
sha2 = "0.10"

[build-dependencies]
cc = "1"
embed-resource = "3"
